--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,8 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    font-size: 46px;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
