--- a/styles/products.css
+++ b/styles/products.css
@@ -30,7 +30,7 @@ header {
 
 li {
     list-style: none;
-    background-color: var(--antique-brass);
+    background-color: var(--artichoke);
     width: 30%;
     height: 100%;
     margin: 5px;
@@ -49,7 +49,6 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
     background-color: var(--desert-sand);
-    border: 5px black solid;
 }
 
 .fern {
